--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "deck.gl": "^8.5.8",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emailjs-com": "^3.2.0",
     "emoji-mart": "^3.0.0",
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
