solving the main navbar

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,17 @@
   "display": "standalone",
   "start_url": "/",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "icons": [
+    {
+      "src": "favicon/favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    }
+  ]
 }
