--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-intersection-observer": "^8.32.1",
     "react-map-gl": "^6.1.17",
     "react-markdown": "^7.0.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.5",
     "react-router": "^6.0.0-beta.4",
